<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Bichinho Virtual</string>

    <string name="text_emotion_report">
        Emoção no texto:\n
        \tSadness: %1$s\n
        \tJoy: %2$s\n
        \tFear: %3$s\n
        \tDisgust: %4$s\n
        \tAnger: %5$s\n
    </string>

    <string name="face_emotion_report">
        \n
        Valência de emoção na face: %1$s
    </string>

    <string name="log_report">
        \n
        Emoção atual: %1$s\n
        Intensidade: %2$f
    </string>

    <string name="microfone">Microfone</string>
    <string name="camera">Câmera</string>
    <string name="settings">Configurações</string>
    <string name="hint">Digite aqui…</string>
    <string name="permission_denied">Permissão de armazenamento negada</string>
    <string name="error">Erro ao procurar imagem</string>
    <string name="saved_message">Imagem armazenada em %1$s</string>
    <string name="listening">Ouvindo…</string>
    <string name="creature_content_description">Imagem do bichinho virtual</string>

    <string name="channel_name">Bichinho Virtual</string>
    <string name="channel_description">Bichinho Virtual</string>

    <string name="translate_service_endpoint">https://translate.yandex.net/api/v1.5/tr.json/</string>

    <string name="title_activity_settings">Configurações</string>

    <string-array name="creature_type_entries">
        <item>Extrovertido</item>
        <item>Neurótico</item>
    </string-array>

    <string-array name="creature_type_values">
        <item>100</item>
        <item>101</item>
    </string-array>

    <string-array name="forecast_entries">
        <item>Bom</item>
        <item>Frio</item>
        <item>Calor</item>
        <item>Chuva</item>
    </string-array>

    <string-array name="forecast_entries_values">
        <item>211</item>
        <item>209</item>
        <item>210</item>
        <item>208</item>
    </string-array>

    <string-array name="extrovert_bored_messages">
        <item>Como está meu humano favorito?</item>
        <item tools:ignore="Typos">Acho que ouvi um "cri cri"…</item>
        <item>E aí, qual é a boa de hoje?</item>
    </string-array>

    <string-array name="neurotic_bored_messages">
        <item>Oi??? Esqueceu que eu existo?</item>
        <item>Ninguém se importa comigo…</item>
        <item>Oh vida! Oh céus! Oh tédio!</item>
    </string-array>

    <!-- Preferences -->
    <string name="show_log_pref">show_log</string>
    <string name="personality_type_pref">personality_type</string>
    <string name="decay_interval_pref">decay_interval</string>
    <string name="decay_factor_pref">decay_factor</string>
    <string name="disposition_time_start_pref">disposition_time_start</string>
    <string name="disposition_time_end_pref">disposition_time_end</string>
    <string name="weather_condition_pref">weather_condition</string>
    <string name="moving_status_pref">moving_status</string>

    <string name="last_weather_condition_pref">last_weather_condition</string>
    <string name="last_moving_status_pref">last_moving_status</string>
    <string name="last_disposition_result_pref">last_disposition_result</string>
</resources>
