<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:defaultValue="false"
        android:title="Exibir log na tela principal."
        android:key="@string/show_log_pref" />

    <ListPreference
        android:defaultValue="100"
        android:key="@string/personality_type_pref"
        android:title="Tipo de personalidade"
        android:entries="@array/creature_type_entries"
        android:entryValues="@array/creature_type_values"
        />

    <EditTextPreference
        android:defaultValue="10"
        android:title="Intervalo de decaimento (segundos)"
        android:key="@string/decay_interval_pref"
        android:numeric="integer"
        android:summary="Intervalo de decaimento" />

    <EditTextPreference
        android:defaultValue="0.06"
        android:title="Taxa de decaimento"
        android:key="@string/decay_factor_pref"
        android:numeric="decimal"
        android:summary="Taxa de decaimento" />

    <EditTextPreference
        android:defaultValue="8"
        android:title="Início do horário de disposição"
        android:key="@string/disposition_time_start_pref"
        android:numeric="integer"
        android:summary="Início do horário de disposição" />

    <EditTextPreference
        android:defaultValue="20"
        android:title="Fim do horário de disposição"
        android:key="@string/disposition_time_end_pref"
        android:numeric="integer"
        android:summary="Fim do horário de disposição" />

    <ListPreference
        android:defaultValue="211"
        android:key="@string/weather_condition_pref"
        android:title="Previsão do tempo"
        android:entries="@array/forecast_entries"
        android:entryValues="@array/forecast_entries_values"
        />

    <SwitchPreference
        android:defaultValue="false"
        android:title="Em movimento"
        android:key="@string/moving_status_pref" />
</PreferenceScreen>